--- a/src/components/day/day.module.css
+++ b/src/components/day/day.module.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-around;
     margin-bottom: 15px;
+    cursor: pointer;
 }
 .day{
     display: flex;
